# mypine

./: .cursorrules  CLAUDE.md  README.md  pyproject.toml
backtest/: README.md  download_all_data.py
backtest/ema-pullback/: strategy_backtest.py
backtest/market_data/: BNBUSDT_15m_180days.json  BNBUSDT_1d_180days.json  BNBUSDT_1h_180days.json  BNBUSDT_4h_180days.json  BTCUSDT_15m_180days.json  BTCUSDT_1d_180days.json  BTCUSDT_1h_180days.json  BTCUSDT_4h_180days.json  ETHUSDT_15m_180days.json  ETHUSDT_1d_180days.json  ETHUSDT_1h_180days.json  ETHUSDT_4h_180days.json  LINKUSDT_15m_180days.json  LINKUSDT_1d_180days.json  LINKUSDT_1h_180days.json  LINKUSDT_4h_180days.json  SOLUSDT_15m_180days.json  SOLUSDT_1d_180days.json  SOLUSDT_1h_180days.json  SOLUSDT_4h_180days.json  TRXUSDT_15m_180days.json  TRXUSDT_1d_180days.json  TRXUSDT_1h_180days.json  TRXUSDT_4h_180days.json  XRPUSDT_15m_180days.json  XRPUSDT_1d_180days.json  XRPUSDT_1h_180days.json  XRPUSDT_4h_180days.json
backtest/rsi-div/: README.md  SUMMARY.md  USAGE.md  __init__.py  backtest.py  fast_backtest.py  quick_test.py  rsi_divergence_strategy.py  run_backtest.py
nakinvest/: cross-ema-rsi.pine  cross-ema.pine  ema20-pullback.pine  farsi.pine  rsi-divergence-pro.pine  rsi-divergences.pine  three-bar-reversal.pine
nakinvest/backtest/: data_fetcher.py  download_all_data.py  ema-pullback-OPTIMIZED-PROPFIRM.pine  real_data_optimizer.py
nakinvest/indicators/: div.pine  hotzone.pine  rsi-priceaction.pine
nakinvest/module2/: pfr-candle-exceptions.pine  pfr-candle-identifier.pine
(+12 files in other folders)
